# vfont

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  FindWayland.cmake  FindXkbcommon.cmake  README.md  annotated.html  annotated_dup.js  character_8cpp.html  character_8h.html  character_8h.js  character_8h_source.html  circular__dll_8cpp.html  circular__dll_8h.html  circular__dll_8h.js  circular__dll_8h_source.html  classes.html  classvft_1_1CenterTextAlign-members.html  classvft_1_1CenterTextAlign.html  classvft_1_1CenterTextAlign.js  classvft_1_1Character-members.html  classvft_1_1Character.html  classvft_1_1Character.js  classvft_1_1CharacterPushConstants-members.html  classvft_1_1CharacterPushConstants.html  classvft_1_1CharacterPushConstants.js  classvft_1_1CircularDLL-members.html  classvft_1_1CircularDLL.html  classvft_1_1CircularDLL.js  classvft_1_1CircularDLL_1_1Node-members.html  classvft_1_1CircularDLL_1_1Node.html  classvft_1_1CircularDLL_1_1Node.js  classvft_1_1Contour-members.html  classvft_1_1Contour.html  classvft_1_1Contour.js  classvft_1_1Curve-members.html  classvft_1_1Curve.html  classvft_1_1Curve.js  classvft_1_1Edge-members.html  (+403 more)
.github/workflows/: doxygen.yml
examples/: CMakeLists.txt
examples/benchmark/: CMakeLists.txt  benchmark_scene.cpp  benchmark_scene.h  main.cpp
examples/demo/: CMakeLists.txt  demo_scene.cpp  demo_scene.h  main.cpp
examples/editor/: CMakeLists.txt  editor_scene.cpp  editor_scene.h  main.cpp
examples/shared/: CMakeLists.txt  base_camera.cpp  base_camera.h  kb_input.cpp  kb_input.h  ortho_camera.cpp  ortho_camera.h  perspective_camera.cpp  perspective_camera.h  scene.cpp  scene.h  window.cpp  window.h
include/VFONT/: font_atlas.h  i_vulkan_text_renderer.h  polygon_operator.h  sdf_text_renderer.h  tessellation_shaders_text_renderer.h  text_block.h  text_block_builder.h  text_renderer.h  triangulation_tessellator.h  triangulation_text_renderer.h  vulkan_sdf_text_renderer.h  vulkan_tessellation_shaders_text_renderer.h  vulkan_text_renderer.h  vulkan_text_renderer_decorator.h  vulkan_triangulation_text_renderer.h  vulkan_winding_number_text_renderer.h  winding_number_text_renderer.h
libs/freetype/objs/Win32/Debug/: freetype.exp  freetype.ilk
libs/freetype/objs/Win32/Debug/freetype.tlog/: CL.1276.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog  rc.read.1.tlog
libs/vfont/: .clang-format  CMakeLists.txt  Doxyfile
libs/vfont/include/VFONT/: character.h  circular_dll.h  combined_drawer.h  combined_tessellator.h  cpu_drawer.h  cpu_tessellator.h  drawer.h  font.h  font_atlas.h  glyph.h  glyph_cache.h  glyph_compositor.h  glyph_mesh.h  gpu_drawer.h  gpu_tessellator.h  i_vulkan_text_renderer.h  line_divider.h  main.h  polygon_operator.h  renderer.h  renderer_decorator.h  shaper.h  tessellation_shaders_tessellator.h  tessellator.h  text_align_strategy.h  text_block.h  text_block_builder.h  text_renderer.h  text_renderer_utils.h  text_segment.h  timed_renderer.h  triangulation_tessellator.h  unicode.h  vulkan_sdf_text_renderer.h  vulkan_tessellation_shaders_text_renderer.h  vulkan_text_renderer.h  vulkan_text_renderer_decorator.h  vulkan_timed_renderer.h  vulkan_triangulation_text_renderer.h  vulkan_winding_number_text_renderer.h  (+1 more)
libs/vfont/libs/freetype/objs/Win32/Debug/: freetype.dll.recipe  freetype.vcxproj.FileListAbsolute.txt
libs/vfont/libs/freetype/objs/Win32/Debug/freetype.tlog/: CL.command.1.tlog  CL.read.1.tlog  freetype.lastbuildstate  rc.command.1.tlog  rc.write.1.tlog
libs/vfont/shaders/: curve.frag  curve.tesc  curve.vert  sdf.frag  sdf.vert  winding_number.frag  winding_number.vert
libs/vfont/src/: character.cpp  circular_dll.cpp  combined_drawer.cpp  combined_tessellator.cpp  cpu_drawer.cpp  cpu_tessellator.cpp  curve.cpp  drawer.cpp  font.cpp  font_atlas.cpp  glyph.cpp  glyph_cache.cpp  glyph_compositor.cpp  glyph_mesh.cpp  gpu_drawer.cpp  gpu_tessellator.cpp  line_divider.cpp  main.cpp  polygon_operator.cpp  renderer_decorator.cpp  sdf_tessellator.cpp  shaper.cpp  tessellation_shaders_tessellator.cpp  tessellator.cpp  text_align_strategy.cpp  text_block.cpp  text_block_builder.cpp  text_renderer.cpp  text_segment.cpp  timed_renderer.cpp  triangulation_tessellator.cpp  unicode.cpp  vulkan_sdf_text_renderer.cpp  vulkan_tessellation_shaders_text_renderer.cpp  vulkan_text_renderer.cpp  vulkan_text_renderer_decorator.cpp  vulkan_timed_renderer.cpp  vulkan_triangulation_text_renderer.cpp  vulkan_winding_number_text_renderer.cpp  winding_number_tessellator.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  enums_1.js  (+57 more)
shaders/: curve.frag  curve.tesc  curve.tese  curve.vert  sdf.frag  sdf.vert  winding_number.frag
src/: CMakeLists.txt  base_camera.cpp  base_camera.h  benchmark_scene.cpp  benchmark_scene.h  character.cpp  character.h  circular_dll.cpp  demo_scene.cpp  demo_scene.h  edge.cpp  editor_scene.cpp  editor_scene.h  font.cpp  font.h  font_atlas.cpp  glyph.cpp  glyph.h  glyph_cache.cpp  glyph_mesh.cpp  kb_input.cpp  kb_input.h  line_divider.cpp  main.cpp  orto_camera.cpp  orto_camera.h  perspective_camera.cpp  perspective_camera.h  polygon_operator.cpp  scene.cpp  scene.h  sdf_tessellator.cpp  sdf_text_renderer.cpp  shader.vert  shaper.cpp  tessellation_shaders_tessellator.cpp  tessellation_shaders_text_renderer.cpp  text_block.cpp  text_block.h  text_block_builder.cpp  (+16 more)
